@@ -105,6 +105,7 @@ export(read.jplace)
 export(read.nhx)
 export(read.paml_rst)
 export(read.phylip)
+export(read.phyloT)
 export(read.r8s)
 export(read.raxml)
 export(read.tree)
